[gd_scene load_steps=2 format=3 uid="uid://di3ut8c68gk7h"]

[ext_resource type="Script" path="res://scripts/levels/level1.gd" id="1_xqb88"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_xqb88")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 640.0
offset_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "GAMEPLAY"

[node name="PauseMenu" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PauseMenu/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer/AspectRatioContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="PauseMenu/CenterContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[node name="QuitButton" type="Button" parent="PauseMenu/CenterContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="PauseMenu/CenterContainer/AspectRatioContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/AspectRatioContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
