extends Node2D

signal back_to_start_from_pause_menu

func _process(_delta: float) -> void:
	if Input.is_action_just_pressed("Menu"):
		%PauseMenu.visible = !%PauseMenu.visible
		get_tree().paused = !get_tree().paused

func _on_quit_button_pressed() -> void:
	get_tree().quit()


func _on_back_button_pressed() -> void:
	emit_signal("back_to_start_from_pause_menu")
